--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/bk"
     android:layout_width="match_parent"
@@ -28,7 +27,7 @@
         <ProgressBar
             android:id="@+id/progressBar"
             style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="50px" />
+            android:layout_width="match_parent"
+            android:layout_height="36dp" />
     </LinearLayout>
 </RelativeLayout>
